---
source: crates/mabo-build/tests/compiler.rs
description: "struct Sample {\n    f1: vec<u32> @1,\n    f2: hash_map<u32, string> @2,\n    f3: hash_set<u32> @3,\n    f4: option<u32> @4,\n    f5: non_zero<u32> @5,\n}\n\nstruct SampleUnnamed(\n    vec<u32> @1,\n    hash_map<u32, string> @2,\n    hash_set<u32> @3,\n    option<u32> @4,\n    non_zero<u32> @5,\n)"
input_file: crates/mabo-parser/tests/inputs/types_generic.mabo
---
#[allow(unused_imports)]
use ::mabo::buf::{Decode, Encode, Size};
#[derive(Clone, Debug, PartialEq)]
#[allow(dead_code, clippy::module_name_repetitions, clippy::option_option)]
pub struct Sample {
    pub f1: Vec<u32>,
    pub f2: ::std::collections::HashMap<u32, String>,
    pub f3: ::std::collections::HashSet<u32>,
    pub f4: Option<u32>,
    pub f5: ::std::num::NonZeroU32,
}
#[automatically_derived]
impl ::mabo::Encode for Sample {
    #[allow(
        clippy::borrow_deref_ref,
        clippy::deref_addrof,
        clippy::explicit_auto_deref,
        clippy::needless_borrow,
        clippy::too_many_lines,
    )]
    fn encode(&self, w: &mut impl ::mabo::BufMut) {
        let Self { f1, f2, f3, f4, f5 } = self;
        ::mabo::buf::encode_field(
            w,
            ::mabo::FieldId::new(1, ::mabo::FieldEncoding::LengthPrefixed),
            |w| {
                ::mabo::buf::encode_vec(
                    w,
                    f1,
                    |v| { ::mabo::buf::size_u32(*v) },
                    |w, v| {
                        ::mabo::buf::encode_u32(w, *v);
                    },
                );
            },
        );
        ::mabo::buf::encode_field(
            w,
            ::mabo::FieldId::new(2, ::mabo::FieldEncoding::LengthPrefixed),
            |w| {
                ::mabo::buf::encode_hash_map(
                    w,
                    f2,
                    |k| { ::mabo::buf::size_u32(*k) },
                    |v| { ::mabo::buf::size_string(v) },
                    |w, k| {
                        ::mabo::buf::encode_u32(w, *k);
                    },
                    |w, v| {
                        ::mabo::buf::encode_string(w, v);
                    },
                );
            },
        );
        ::mabo::buf::encode_field(
            w,
            ::mabo::FieldId::new(3, ::mabo::FieldEncoding::LengthPrefixed),
            |w| {
                ::mabo::buf::encode_hash_set(
                    w,
                    f3,
                    |v| { ::mabo::buf::size_u32(*v) },
                    |w, v| {
                        ::mabo::buf::encode_u32(w, *v);
                    },
                );
            },
        );
        ::mabo::buf::encode_field_option(
            w,
            ::mabo::FieldId::new(4, ::mabo::FieldEncoding::Varint),
            f4,
            |w, v| {
                ::mabo::buf::encode_u32(w, *v);
            },
        );
        ::mabo::buf::encode_field(
            w,
            ::mabo::FieldId::new(5, ::mabo::FieldEncoding::Varint),
            |w| {
                ::mabo::buf::encode_u32(w, f5.get());
            },
        );
        ::mabo::buf::encode_u32(w, ::mabo::buf::END_MARKER);
    }
}
#[automatically_derived]
impl ::mabo::Decode for Sample {
    #[allow(clippy::type_complexity, clippy::too_many_lines)]
    fn decode(r: &mut impl ::mabo::Buf) -> ::mabo::buf::Result<Self> {
        let mut f1: Option<Vec<u32>> = None;
        let mut f2: Option<::std::collections::HashMap<u32, String>> = None;
        let mut f3: Option<::std::collections::HashSet<u32>> = None;
        let mut f4: Option<u32> = None;
        let mut f5: Option<::std::num::NonZeroU32> = None;
        loop {
            let id = ::mabo::buf::decode_id(r)?;
            match id.value {
                ::mabo::buf::END_MARKER => break,
                1 => {
                    f1 = Some(
                        ::mabo::buf::decode_vec(r, |r| { ::mabo::buf::decode_u32(r) })?,
                    );
                }
                2 => {
                    f2 = Some(
                        ::mabo::buf::decode_hash_map(
                            r,
                            |r| { ::mabo::buf::decode_u32(r) },
                            |r| { ::mabo::buf::decode_string(r) },
                        )?,
                    );
                }
                3 => {
                    f3 = Some(
                        ::mabo::buf::decode_hash_set(
                            r,
                            |r| { ::mabo::buf::decode_u32(r) },
                        )?,
                    );
                }
                4 => f4 = Some(::mabo::buf::decode_u32(r)?),
                5 => f5 = Some(::mabo::buf::decode_non_zero_u32(r)?),
                _ => ::mabo::buf::decode_skip(r, id.encoding)?,
            }
        }
        Ok(Self {
            f1: f1
                .ok_or(::mabo::buf::Error::MissingField {
                    id: 1,
                    name: Some("f1"),
                })?,
            f2: f2
                .ok_or(::mabo::buf::Error::MissingField {
                    id: 2,
                    name: Some("f2"),
                })?,
            f3: f3
                .ok_or(::mabo::buf::Error::MissingField {
                    id: 3,
                    name: Some("f3"),
                })?,
            f4,
            f5: f5
                .ok_or(::mabo::buf::Error::MissingField {
                    id: 5,
                    name: Some("f5"),
                })?,
        })
    }
}
#[automatically_derived]
impl ::mabo::buf::Size for Sample {
    #[allow(
        clippy::borrow_deref_ref,
        clippy::deref_addrof,
        clippy::explicit_auto_deref,
        clippy::needless_borrow,
        clippy::too_many_lines,
    )]
    fn size(&self) -> usize {
        let Self { f1, f2, f3, f4, f5 } = self;
        ::mabo::buf::size_field(
            1,
            || { ::mabo::buf::size_vec(f1, |v| { ::mabo::buf::size_u32(*v) }) },
        )
            + ::mabo::buf::size_field(
                2,
                || {
                    ::mabo::buf::size_hash_map(
                        f2,
                        |k| { ::mabo::buf::size_u32(*k) },
                        |v| { ::mabo::buf::size_string(v) },
                    )
                },
            )
            + ::mabo::buf::size_field(
                3,
                || { ::mabo::buf::size_hash_set(f3, |v| { ::mabo::buf::size_u32(*v) }) },
            )
            + ::mabo::buf::size_field_option(
                4,
                f4.as_ref(),
                |v| { ::mabo::buf::size_u32(*v) },
            ) + ::mabo::buf::size_field(5, || { ::mabo::buf::size_u32(f5.get()) })
            + ::mabo::buf::END_MARKER_SIZE
    }
}
#[derive(Clone, Debug, PartialEq)]
#[allow(dead_code, clippy::module_name_repetitions, clippy::option_option)]
pub struct SampleUnnamed(
    pub Vec<u32>,
    pub ::std::collections::HashMap<u32, String>,
    pub ::std::collections::HashSet<u32>,
    pub Option<u32>,
    pub ::std::num::NonZeroU32,
);
#[automatically_derived]
impl ::mabo::Encode for SampleUnnamed {
    #[allow(
        clippy::borrow_deref_ref,
        clippy::deref_addrof,
        clippy::explicit_auto_deref,
        clippy::needless_borrow,
        clippy::too_many_lines,
    )]
    fn encode(&self, w: &mut impl ::mabo::BufMut) {
        let Self(n0, n1, n2, n3, n4) = self;
        ::mabo::buf::encode_field(
            w,
            ::mabo::FieldId::new(1, ::mabo::FieldEncoding::LengthPrefixed),
            |w| {
                ::mabo::buf::encode_vec(
                    w,
                    n0,
                    |v| { ::mabo::buf::size_u32(*v) },
                    |w, v| {
                        ::mabo::buf::encode_u32(w, *v);
                    },
                );
            },
        );
        ::mabo::buf::encode_field(
            w,
            ::mabo::FieldId::new(2, ::mabo::FieldEncoding::LengthPrefixed),
            |w| {
                ::mabo::buf::encode_hash_map(
                    w,
                    n1,
                    |k| { ::mabo::buf::size_u32(*k) },
                    |v| { ::mabo::buf::size_string(v) },
                    |w, k| {
                        ::mabo::buf::encode_u32(w, *k);
                    },
                    |w, v| {
                        ::mabo::buf::encode_string(w, v);
                    },
                );
            },
        );
        ::mabo::buf::encode_field(
            w,
            ::mabo::FieldId::new(3, ::mabo::FieldEncoding::LengthPrefixed),
            |w| {
                ::mabo::buf::encode_hash_set(
                    w,
                    n2,
                    |v| { ::mabo::buf::size_u32(*v) },
                    |w, v| {
                        ::mabo::buf::encode_u32(w, *v);
                    },
                );
            },
        );
        ::mabo::buf::encode_field_option(
            w,
            ::mabo::FieldId::new(4, ::mabo::FieldEncoding::Varint),
            n3,
            |w, v| {
                ::mabo::buf::encode_u32(w, *v);
            },
        );
        ::mabo::buf::encode_field(
            w,
            ::mabo::FieldId::new(5, ::mabo::FieldEncoding::Varint),
            |w| {
                ::mabo::buf::encode_u32(w, n4.get());
            },
        );
        ::mabo::buf::encode_u32(w, ::mabo::buf::END_MARKER);
    }
}
#[automatically_derived]
impl ::mabo::Decode for SampleUnnamed {
    #[allow(clippy::type_complexity, clippy::too_many_lines)]
    fn decode(r: &mut impl ::mabo::Buf) -> ::mabo::buf::Result<Self> {
        let mut n0: Option<Vec<u32>> = None;
        let mut n1: Option<::std::collections::HashMap<u32, String>> = None;
        let mut n2: Option<::std::collections::HashSet<u32>> = None;
        let mut n3: Option<u32> = None;
        let mut n4: Option<::std::num::NonZeroU32> = None;
        loop {
            let id = ::mabo::buf::decode_id(r)?;
            match id.value {
                ::mabo::buf::END_MARKER => break,
                1 => {
                    n0 = Some(
                        ::mabo::buf::decode_vec(r, |r| { ::mabo::buf::decode_u32(r) })?,
                    );
                }
                2 => {
                    n1 = Some(
                        ::mabo::buf::decode_hash_map(
                            r,
                            |r| { ::mabo::buf::decode_u32(r) },
                            |r| { ::mabo::buf::decode_string(r) },
                        )?,
                    );
                }
                3 => {
                    n2 = Some(
                        ::mabo::buf::decode_hash_set(
                            r,
                            |r| { ::mabo::buf::decode_u32(r) },
                        )?,
                    );
                }
                4 => n3 = Some(::mabo::buf::decode_u32(r)?),
                5 => n4 = Some(::mabo::buf::decode_non_zero_u32(r)?),
                _ => ::mabo::buf::decode_skip(r, id.encoding)?,
            }
        }
        Ok(
            Self(
                n0
                    .ok_or(::mabo::buf::Error::MissingField {
                        id: 1,
                        name: None,
                    })?,
                n1
                    .ok_or(::mabo::buf::Error::MissingField {
                        id: 2,
                        name: None,
                    })?,
                n2
                    .ok_or(::mabo::buf::Error::MissingField {
                        id: 3,
                        name: None,
                    })?,
                n3,
                n4
                    .ok_or(::mabo::buf::Error::MissingField {
                        id: 5,
                        name: None,
                    })?,
            ),
        )
    }
}
#[automatically_derived]
impl ::mabo::buf::Size for SampleUnnamed {
    #[allow(
        clippy::borrow_deref_ref,
        clippy::deref_addrof,
        clippy::explicit_auto_deref,
        clippy::needless_borrow,
        clippy::too_many_lines,
    )]
    fn size(&self) -> usize {
        let Self(n0, n1, n2, n3, n4) = self;
        ::mabo::buf::size_field(
            1,
            || { ::mabo::buf::size_vec(n0, |v| { ::mabo::buf::size_u32(*v) }) },
        )
            + ::mabo::buf::size_field(
                2,
                || {
                    ::mabo::buf::size_hash_map(
                        n1,
                        |k| { ::mabo::buf::size_u32(*k) },
                        |v| { ::mabo::buf::size_string(v) },
                    )
                },
            )
            + ::mabo::buf::size_field(
                3,
                || { ::mabo::buf::size_hash_set(n2, |v| { ::mabo::buf::size_u32(*v) }) },
            )
            + ::mabo::buf::size_field_option(
                4,
                n3.as_ref(),
                |v| { ::mabo::buf::size_u32(*v) },
            ) + ::mabo::buf::size_field(5, || { ::mabo::buf::size_u32(n4.get()) })
            + ::mabo::buf::END_MARKER_SIZE
    }
}
